[gd_scene load_steps=11 format=3 uid="uid://bwn42fyylanlh"]

[ext_resource type="Script" uid="uid://1mvd4hod7rg7" path="res://interactables/float-box.gd" id="1_hk55f"]
[ext_resource type="Texture2D" uid="uid://buayg4cbwgjxq" path="res://resources/textures/spritesheet.png" id="1_upv2h"]
[ext_resource type="Script" uid="uid://0126yehirvr6" path="res://interactables/interact-area.gd" id="2_hk55f"]

[sub_resource type="AtlasTexture" id="AtlasTexture_57adf"]
atlas = ExtResource("1_upv2h")
region = Rect2(40, 0, 8, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a7gc8"]
size = Vector2(8, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1yhvm"]
size = Vector2(8, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_etkdd"]
size = Vector2(12, 4)

[sub_resource type="Animation" id="Animation_hk55f"]
resource_name = "explode"
length = 0.9
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 0, 1, 0, 1]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.9),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_explode_dirt"
}]
}

[sub_resource type="Animation" id="Animation_57adf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a7gc8"]
_data = {
&"RESET": SubResource("Animation_57adf"),
&"explode": SubResource("Animation_hk55f")
}

[node name="FloatBox" type="CharacterBody2D"]
collision_layer = 16
collision_mask = 14
script = ExtResource("1_hk55f")
gravity = 400.0
fall_speed = 40.0
friction = 120.0
radius = 16

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_57adf")
vframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_a7gc8")

[node name="PlatformCollision" type="StaticBody2D" parent="."]
unique_name_in_owner = true
visible = false
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlatformCollision"]
shape = SubResource("RectangleShape2D_1yhvm")
one_way_collision = true

[node name="InteractArea" type="Area2D" parent="."]
unique_name_in_owner = true
visible = false
collision_layer = 0
script = ExtResource("2_hk55f")
_prompt = "Carry"
metadata/_custom_type_script = "uid://0126yehirvr6"

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea"]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_etkdd")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_a7gc8")
}

[connection signal="interaction" from="InteractArea" to="." method="_on_interact"]
